[TASK] Fix alignment of help icon in new element dialog

--- a/TYPO3.Neos/Resources/Private/Styles/Components/_HelpMessage.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Components/_HelpMessage.scss
@@ -6,7 +6,8 @@
 .neos-help-message-icon {
 	color: $textOnGray;
 	font-size: 1rem;
-	vertical-align: middle; // align the icon inside
+	position: relative;
+	top: 4px;
 	cursor: pointer;
 	text-decoration: none;
 }
